# infer-subc

./: .gitignore  20230221_MSI_3Dmeasurements.csv  202303063_MCZ-SR_3Dmeasurement-prioritylist.xlsx  404.html  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  env_create.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.yaml  windows_notes.md
.github/: rename_project.sh
.github/workflows/: ci.yml  ci.yml.disable  publish.yml
config/: index.html
docs/: config.md  framework.md  index.md  pipeline.md  quantification.md  segmentation.md
docs/infer_subc/: batch.md  main.md  organelles.md  overview.md
docs/infer_subc_2d/: batch.md  main.md  organelles.md  overview.md  utils.md  workflow.md
docs/nbs/: overview.md
docs/notebooks/: nbs_overview.md
framework/: index.html
infer_subc/: __init__.py  __main__.py  _version.py  base.py  cli.py  const.py  constants.py  img_util.py  imports.py
infer_subc/_depricated/: base.py
infer_subc/batch/: __init__.py  batch_process.py
infer_subc/bioim/: base.py  object.py
infer_subc/core/: file_io.py  img.py  zslice.py
infer_subc/organelles/: __init__.py  cellmask.py  cytoplasm.py  cytosol.py  er.py  golgi.py  index.html  lipid.py  lysosome.py  lysosomes.py  masks.py  membrane.py  mitochondria.py  nuclei.py  organelle.py  peroxisome.py  peroxisomes.py  qc.py  soma.py
infer_subc/organelles_config/: all_functions.json  conf_0.1.masks.json  conf_0.1.masks_A.json  conf_0.1.masks_B.json  conf_0.1.masks_C.json  conf_0.1.masks_D.json  conf_0.2.lyso.json  conf_0.3.mito.json  conf_0.4.golgi.json  conf_0.5.perox.json  conf_0.6.ER.json  conf_0.7.LD.json  conf_0.8.PM.json  conf_0.9.vesicles.json  conf_0.9.vessicles.json  function_guide.md  function_params.md  helper.py
infer_subc/overview/: index.html
infer_subc/transforms/: pipeline.py  transform.py
infer_subc/utils/: _aicsimage_reader.py  batch.py  directories.py  file_io.py  img.py  lazy.py  stats.py  stats_helpers.py
infer_subc/workflow/: __init__.py  batch_workflow.py  index.html  workflow.py  workflow_config.py  workflow_definition.py  workflow_engine.py  workflow_step.py
infer_subc_2d/: __init__.py  __main__.py  cli.py  constants.py  imports.py
infer_subc_2d/_depricated/: _12_QC.ipynb  base.py  infer_subc_2D_workflow.py
infer_subc_2d/batch/: batch_process.py
infer_subc_2d/core/: file_io.py  img.py  zslice.py
infer_subc_2d/organelles/: __init__.py  cellmask.py  cytoplasm.py  cytosol.py  er.py  golgi.py  helpers.py  lipid.py  lysosome.py  lysosomes.py  mitochondria.py  nuclei.py  organelle.py  peroxisome.py  peroxisomes.py  qc.py  soma.py  zslice.py
infer_subc_2d/organelles_config/: all_functions.json  conf_0.1.masks.json  conf_0.1.masks_MCZ.json  conf_0.2.lyso.json  conf_0.3.mito.json  conf_0.4.golgi.json  conf_0.5.perox.json  conf_0.6.ER.json  conf_0.7.LD.json  conf_1.1.cytoplasm_fromcomposite.json  conf_1.1.cytoplasm_nucleus_cell_fromaggr.json  conf_1.1.nuclei.json  conf_1.1.soma_stepbystep_from_raw.json  conf_1.2.cellmask.json  conf_1.2.cellmask2.json  conf_1.2.masks.json  conf_1.2.nuclei_stepbystep_from_raw.json  conf_1.2.soma.json  conf_1.2.soma2.json  conf_1.3.cytoplasm.json  conf_1.3.cytosol.json  conf_1.3.cytosol_from_raw.json  conf_1.4.lyso.json  conf_1.4.lysosome_stepbystep_from_raw.json  conf_1.5.mito.json  conf_1.6.golgi.json  conf_1.6.golgi_stepbystep_from_raw.json  conf_1.7.perox.json  conf_1.8.ER.json  conf_1.9.LD.json  conf_1.9.lipid_stepbystep_from_raw.json  conf_infer_fixed_infer_organelles_batch.json  conf_infer_nuclei.json  conf_nuclei.json  conf_soma_stepbystep.json  conf_soma_stepbystep_from_raw.json  conf_test.json  function_guide.md  function_params.md  helper.py  (+3 more)
infer_subc_2d/utils/: _aicsimage_reader.py  directories.py  file_io.py  filesystem.py  img.py  stats.py  stats_helpers.py
infer_subc_2d/workflow/: __init__.py  batch_workflow.py  infer_subc_2D_workflow.py  workflow.py  workflow_config.py  workflow_definition.py  workflow_engine.py  workflow_step.py
nbs/overview/: index.html
notebooks/: 00.0_framework_overview.ipynb  00.0_framework_overview_3D.ipynb  00.1_pipeline_setup.ipynb  00.1_pipeline_setup_3D.ipynb  00.2_extract_optimal_Z.ipynb  00_pipeline_setup.ipynb  00_pipeline_setup_windoze.ipynb  01_B_infer_masks_from-composite_multiple-cells.ipynb  01_infer_cytoplasm_from_composite.ipynb  01_infer_nuclei-from-ERsignal_3D.ipynb  01_infer_nuclei.ipynb  01_infer_nuclei_3D.ipynb  01_infer_nuclei_from-label.ipynb  01_infer_soma.ipynb  01a_infer_cytoplasm_from-composite.ipynb  01a_infer_cytoplasm_fromaggr.ipynb  01ab_infer_cyto_nuc_cell_fromaggr.ipynb  01b_infer_nucleus_cellmask_from_cytoplasm.ipynb  02_infer_cellmask.ipynb  02_infer_cellmask_from-composite.ipynb  02_infer_cellmask_from-composite_with-nuclei.ipynb  02_infer_nuclei.ipynb  02_infer_nucleus_cellmask_from_cytoplasm.ipynb  02_infer_soma.ipynb  02_infer_soma_3D.ipynb  02_organelle_contact_analysis.ipynb  02a_cell_membrane.ipynb  02a_infer_cellmask_from_membrane.ipynb  02a_infer_nucleus_from-cytoplasm.ipynb  02a_infer_soma_3D.ipynb  02b_infer_neurites_3D.ipynb  03_infer_cytoplasm.ipynb  03_infer_cytosol.ipynb  03_infer_cytosol_3D.ipynb  03a_infer_cellmask_from-cytoplasm.ipynb  04_infer_lysosome.ipynb  04_infer_lysosome_3D.ipynb  04_infer_lysosomes.ipynb  04_infer_neurites_soma_from-cellmask.ipynb  05_infer_lysosome.ipynb  (+55 more)
notebooks/part_1_segmentation_workflows/: 00_image_setup.ipynb  01_infer_masks_from-composite_with_nuc.ipynb  01a_infer_masks_from-composite_single_cell.ipynb  01b_infer_masks_from-composite_multiple-cells.ipynb  02_infer_lysosome.ipynb  03_infer_mitochondria.ipynb  05_infer_peroxisome.ipynb  07_infer_lipid_droplet.ipynb  1.0_image_setup.ipynb  1.1_infer_masks_from-composite_with_nuc.ipynb  1.1a_infer_masks_from-composite_single_cell.ipynb  1.1b_infer_masks_from-composite_multiple-cells.ipynb  1.2_infer_lysosome.ipynb  1.4_infer_golgi.ipynb  (+6 more)
pipeline/: index.html
sample_data/: sample_data_info.md
search/: search_index.json
tests/: test_base.py
(+126 files in other folders)
