[project]
name = "infer-subc"
dynamic = ["version"]
requires-python = ">=3.7"
description = "A plugin that enables organelle segmentation and analysis"
keywords = ["organelles", "segmentation", "morphology", "organelle contacts", "distribution", "ER", "lysosomes", "mitochondria", "peroxisomes", "Golgi", "lipid droplets"]
readme = "README.md"

authors = [
    {name = "Andy Henrie", email = "ergonyc@gmail.com"},
    {name = "Shannon Rhoads", email = "rhoads.shannon@gmail.com"},
    {name = "Rene Mfulama", email = "mfulamangudiankama@gmail.com"},
    {name = "Zach coman", email = "zachcoman@gmail.com"}
]

maintainers = [
    {name = "Shannon Rhoads", email = "rhoads.shannon@gmail.com"},
    {name = "Rene Mfulama", email = "mfulamangudiankama@gmail.com"},
    {name = "Zach coman", email = "zachcoman@gmail.com"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

license = {file = "LICENSE"}

dependencies = [
    'numpy >=1.15.1, <= 1.26.4',
    'napari',
    'napari-aicsimageio',
    'aicssegmentation',
    'aicsimageio >= 4.7.0',
    'scipy',    #>=1.1.0,
    'scikit-learn', #>=0.18.0,<0.19.0, 
    'pandas',   #>=0.23.4, 
    'centrosome',
    'aicspylibczi>=3.1.1'
]


[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "infer_subc/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"
#git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"


#[tool.setuptools]
# packages = ["infer_subc"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
infer_subc = ["organelles_config/*"]

[tool.black]
line-length = 120