[metadata]
name = infer-subc
description = A plugin that enables organelle segmentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ndcn/infer-subc
author = Andy Henrie
author_email = ergonyc@gmail.com
license = BSD-3
license_file = LICENSE
classifiers =
	Development Status :: 3 - Alpha	
	Intended Audience :: Science/Research	
	Topic :: Scientific/Engineering	
	Topic :: Scientific/Engineering :: Visualization	
	Topic :: Scientific/Engineering :: Information Analysis	
	Topic :: Scientific/Engineering :: Bio-Informatics	
	Programming Language :: Python	
	Programming Language :: Python :: 3		
	Programming Language :: Python :: 3.8	
	Programming Language :: Python :: 3.9		
    Programming Language :: Python :: 3.10	
	Operating System :: OS Independent	
	License :: OSI Approved :: BSD License	
project_urls =
    Bug Tracker = https://github.com/ndcn/infer-subc/issues
    Documentation = https://github.com/ndcn/infer-subc#README.md
    Source Code = https://github.com/ndcn/infer-subc
    User Support = https://github.com/ndcn/infer-subc/issues

[options]
packages = find:
install_requires =
    napari
    aicssegmentation
    aicsimageio
    numpy
    aicsimageio >= 4.7.0
    scipy    #>=1.1.0
    numpy    #>=1.15.1
    scikit-image #>=0.18.0,<0.19.0 
    pandas   #>=0.23.4 
    jupyter
    centrosome

platforms = any

python_requires = >=3.8
include_package_data = True
package_dir =
    = .
setup_requires = setuptools_scm
# add your package requirements here ?

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    infer_subc = infer_subc.__main__:main

[options.package_data]
* = *.yaml

[bdist_wheel]
universal = 1



